# litehouse

./: LICENSE  README.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml  pages.yml  release.yml
assets/: manifest.webmanifest  sw.js
assets/brand/: README.md
assets/fonts/report/: OFL.txt  SOURCE.txt
migrations/: env.py
migrations/versions/: 20260715_0001_initial.py  20260715_0002_vault_library.py  20260715_0003_report_execution.py
scripts/: build_sidecar.py  hash_artifacts.py  sidecar_entry.py  smoke_sidecar.py  tauri-build.mjs  write_release_config.py
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.release.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: backend.rs  lib.rs  main.rs  menu.rs  updater.rs
src/litehouse/: __init__.py  cli.py  config.py  sidecar.py
src/litehouse/application/: __init__.py  reporting.py  reviews.py  scheduler.py  schemas.py  services.py  worker.py
src/litehouse/domain/: __init__.py  entities.py
src/litehouse/infrastructure/: __init__.py  blobs.py
src/litehouse/infrastructure/db/: __init__.py  models.py  repositories.py  session.py
src/litehouse/infrastructure/documents/: __init__.py  blob_store.py  client.py  models.py  policy.py  transport.py
src/litehouse/infrastructure/exports/: __init__.py  citations.py  models.py  serializers.py
src/litehouse/infrastructure/fetch/: __init__.py  client.py  models.py  policy.py  resolver.py  transport.py
src/litehouse/interfaces/: __init__.py
web/: index.html  package.json  tsconfig.json  vite.config.ts
web/src/: App.tsx  BrowserReportPage.tsx  ConfirmDeleteDialog.tsx  ErrorBoundary.tsx  LibraryPage.tsx  PrivacyPage.tsx  ReportWizard.tsx  SettingsPage.tsx  appearance.tsx  browser-vault.css  declutter.css  fixtures.ts  i18n.tsx  library-fixtures.ts  main.tsx  native.ts  settings.css  shortcuts.tsx  styles.css  vite-env.d.ts  workspace.css
web/src/browser/: vault.ts
web/src/llm/: BrowserModelPanel.css  BrowserModelPanel.tsx  browserModel.worker.ts  browserModelRuntime.ts  capability.ts  catalog.ts  useBrowserModel.ts
web/src/providers/: RemoteProviderPanel.tsx  remote.ts  session.ts
web/src/reader/: PdfSurface.tsx  ReaderPage.tsx  anchors.ts  demoPdf.ts  storage.ts  types.ts
web/src/research/: integrity.ts  latex.ts  markdown.ts  report.ts  sources.ts  types.ts
(+59 files in other folders)
