[build-system]
requires = ["hatchling==1.31.0"]
build-backend = "hatchling.build"

[project]
name = "litehouse"
version = "0.1.0a1"
description = "Local-first, evidence-locked literature surveillance for all research disciplines."
readme = "README.md"
requires-python = ">=3.13,<3.14"
license = { text = "Apache-2.0" }
authors = [{ name = "Tuna Birgün", email = "" }]
dependencies = [
  "aiosqlite==0.22.1",
  "alembic==1.18.5",
  "apscheduler==3.11.3",
  "fastapi==0.139.0",
  "greenlet==3.5.3",
  "httpcore==1.0.9",
  "httpx==0.28.1",
  "keyring==25.7.0",
  "pydantic==2.13.4",
  "pydantic-settings==2.14.2",
  "sqlalchemy==2.0.51",
  "typer==0.26.8",
  "uvicorn==0.51.0",
]

[project.scripts]
litehouse = "litehouse.cli:app"

[dependency-groups]
dev = [
  "mypy==2.3.0",
  "pyinstaller==6.21.0",
  "pyinstaller-hooks-contrib==2026.6",
  "pytest==9.1.1",
  "pytest-asyncio==1.4.0",
  "pytest-cov==7.1.0",
  "respx==0.23.1",
  "ruff==0.15.21",
]

[tool.hatch.build.targets.wheel]
packages = ["src/litehouse"]

[tool.hatch.build.targets.wheel.force-include]
"migrations" = "litehouse/_migrations"

[tool.pytest.ini_options]
addopts = "-ra --strict-config --strict-markers"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "S"]
ignore = ["S101"]

[tool.mypy]
python_version = "3.13"
strict = true
packages = ["litehouse"]
