[package]
name = "litehouse-desktop"
version = "0.1.0-alpha.1"
description = "Native shell for Litehouse"
authors = ["Tuna Birgün"]
edition = "2024"
license = "Apache-2.0"
rust-version = "1.96.1"

[lib]
name = "litehouse_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "=2.6.3", features = [] }

[dependencies]
base64 = "=0.22.1"
getrandom = "=0.4.2"
reqwest = { version = "=0.13.4", default-features = false, features = ["json", "rustls"] }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.150"
sha2 = "=0.10.9"
tauri = { version = "=2.11.5", features = [] }
tauri-plugin-dialog = "=2.7.1"
tauri-plugin-updater = "=2.10.1"
url = "=2.5.8"
zeroize = "=1.9.0"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
